--- a/20170831.md
+++ b/20170831.md
@@ -1,5 +1,12 @@
 # Challenge as per 2017-08-31
 
-| No | Task        | Deadline | Punishment 1            | Punishment 2                         | Punishment 3 | Done | Time | Proof |
-|:---|:------------|:---------|:------------------------|:-------------------------------------|:-------------|:-----|:-----|:------|
-| 1  | CCNA Task 1 | 2:15 PM  | Disable chat until 2:45 | No YouTube / watch / listen to music | False        | N/A  | N/A  |![alt text](./images/NA.png "Image")|
+| No | Task        | Deadline | Punishment 1            | Punishment 2                         | Punishment 3 | Done  | Time | Proof |                                      |
+|:---|:------------|:---------|:------------------------|:-------------------------------------|:-------------|:------|:-----|:------|:-------------------------------------|
+| 1  | CCNA Task 1 | 2:15 PM  | Disable chat until 2:45 | No YouTube / watch / listen to music | N/A          | False | N/A  | N/A   | ![alt text](./images/NA.png "Image") |
+
+
+
+
+
+
+
